--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -24,7 +24,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
 # add_executable(TestAStar test/testAStar.cpp src/AStar.cpp src/MAPFLoader.cpp)
 # add_executable(TestMAPFLoader test/testMAPFLoader.cpp src/MAPFLoader.cpp)
 # add_executable(TestCBS test/testCBS.cpp src/MAPFLoader.cpp src/CBSSolver.cpp src/AStar.cpp)
-add_library(cbsSolver src/CBSSolver.cpp src/AStar.cpp)
+
+add_library(cbsSolver src/CBSSolver.cpp src/AStar.cpp src/ConflictModel.cpp)
 target_link_libraries(cbsSolver "${TORCH_LIBRARIES}")
 
 add_executable(CBS src/main.cpp src/MAPFLoader.cpp)
@@ -34,7 +35,7 @@ add_executable(GenerateData src/GenerateData.cpp src/Instance.cpp src/MAPFLoader
 target_link_libraries(GenerateData argparse)
 target_link_libraries(GenerateData cbsSolver)
 
-add_executable(TrainModel src/TrainModel.cpp src/Instance.cpp src/DataLoader.cpp src/MAPFLoader.cpp)
+add_executable(TrainModel src/TrainModel.cpp src/Instance.cpp src/DataLoader.cpp src/MAPFLoader.cpp src/ConflictModel.cpp)
 target_link_libraries(TrainModel argparse)
 target_link_libraries(TrainModel cbsSolver)
 target_link_libraries(TrainModel "${TORCH_LIBRARIES}")
